client/src/components/pages/LobbyPage.css
@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap");

* {
  box-sizing: border-box;
}

.main-container {
  width: 100%;
  height: 100%;
  background-image: url(../modules/Images/Host-Join.jpg);
  background-size: cover;
  background-repeat: no-repeat;
  position: relative;
}

.lobby-title {
  font-weight: bold;
  font-size: 6vw;
  color: white;
  filter: drop-shadow(2px 4px 2px #4e5e80);
  text-decoration: none;
  font-family: 'Times New Roman', Times, serif;
  text-align: center;
}

.LobbyPage-quit {
  margin-top: 8px;
  margin-right: 8px;
  height: 32px;
  font-size: 24px;
  width: 100px;
  text-align: center;
  line-height: 16px;
  background-color: #2c2e41;
  color: white;
  border: rgb(104, 104, 104) solid 1px;
  border-radius: 16px;
  text-decoration: none;
}

.lobby-title-container {
  display: flex;
  justify-content: space-between;
}

.Host-Button {
  width: 21vw;
  height: 5.5vw;
  color: var(--offWhite);
  text-align: center;
  text-decoration: none;
  line-height: 70px;
  font-weight: 700;
  font-size: 2.5vw;
  font-family: "Times New Roman", Times, serif;
  background-color: #2c2e41;
  border-radius: 40px;
  filter: drop-shadow(2px 4px 2px #4e5e80);
  display: inline-block;
}

.Host-Button :hover {
  color: white;
}

.Join-Button {
  width: 21vw;
  height: 5.5vw;
  color: var(--offWhite);
  text-decoration: none;
  text-align: center;
  font-weight: 700;
  font-size: 2.5vw;
  font-family: "Times New Roman", Times, serif;
  background-color: #2c2e41;
  border-radius: 40px;
  filter: drop-shadow(2px 4px 2px #4e5e80);
  display: inline-block;
}

.Join-Button:hover {
  color: white;
}

.Host-Container {
  padding-top: 80px;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 32px;
}

.LobbyPage-username-container {
  display: flex;
  flex-direction: column;
  gap: 16px;
  justify-content: center;
  align-items: center;
  background-color: #2c2e41;
  padding: 16px;
  width: 21vw;
  height: 15vw;
  border-radius: 50px;
  color: var(--offWhite);
}

.LobbyPage-name {
  color: #ecf407;
}

.LobbyPage-username-display {
  font-size: 2vw;
  margin-top: -8px;
  text-align: center;
  justify-content: center;
  align-self: center;
  font-family: "Times New Roman", Times, serif;
  font-weight: 500;
  font-weight: bold;
  filter: drop-shadow(2px 4px 2px #4e5e80);
}

.LobbyPage-username-input {
  color: #2c2e41;
}

.LobbyPage-username-button {
  height: 32px;
  font-size: 24px;
  width: 240px;
  text-align: center;
  background-color: var(--offWhite);
  color: #2c2e41;
  border-radius: 10px;
  align-items: center;
  line-height: 20px;
  font-family: "Times New Roman", Times, serif;
  font-weight: bold;
}

.LobbyPage-change-username-button {
  height: 32px;
  font-size: 24px;
  width: 240px;
  text-align: center;
  background-color: var(--offWhite);
  color: #2c2e41;
  border-radius: 10px;
  align-items: center;
  line-height: 20px;
  font-family: "Times New Roman", Times, serif;
  font-weight: bold;
}

.LobbyPage-change-username-button:hover {
  color: rgb(98, 52, 6);
  box-shadow: 0 5px 15px #4e5e80;
}

.LobbyPage-key-text {
  font-size: 2vw;
  font-family: 'Times New Roman', Times, serif;
}

.LobbyPage-key-input,
.LobbyPage-key-submit {
  line-height: 1.6vw;
  height: 2.5vw;
  font-size: 2vw;
  width: 9vw;
  text-align: center;
  text-justify: center;
  font-family: 'Times New Roman', Times, serif;
  background-color: var(--offWhite);
  color: #2c2e41;
  border-radius: 10px;
  font-family: "Times New Roman", Times, serif;
  font-weight: bold;
  line-height: 20px;
}

.LobbyPage-key-back {
  line-height: 1vw;
  font-size: 1vw;
  font-weight: 700;
  height: 1.5vw;
  width: 3vw;
  text-align: center;
  background-color: var(--offWhite);
  color: #2c2e41;
  border-radius: 5px;
  font-family: 'Times New Roman', Times, serif;
}

